lessons spacing fix

--- a/site.css
+++ b/site.css
@@ -173,6 +173,10 @@ nav a, nav a:visited  {
 	max-width: 700px;
 }
 
+#lessons .left, #lessons .right {
+	width: 50%;
+}
+
 #lessons p {
 	text-align: left;
 	margin: 10px auto;
@@ -361,6 +365,10 @@ footer img {
 		width: 100%;
 		padding-left: 0;
 		margin-top: 15px;
+	}
+
+	#lessons .left, #lessons .right {
+		width: 100%;
 	}
 
 	#lessons p {
